# Adeept_RaspClaws

./: .clinerules  .gitignore  ACTIONS_README.md  AGENTS.md  CAMERA_TEMPORARY_DISABLED.md  DOCKERFILE_FIX_BOOKWORM_PACKAGES.md  DOCKERFILE_MULTISTAGE_LIBCAMERA.md  DOCKERFILE_UBUNTU2204_FIX.md  Dockerfile.ros2  GEMINI.md  HOTFIX_LIBCAMERA.md  KAMERA_TEST_PI.md  README.md  ROS2_CAMERA_HOST_SOLUTION.md  ROS2_CAMERA_TEST_CHECKLIST.md  ROS2_QUICKSTART.md  SERVO_FIX_CRITICAL.md  SIMPLE_CAMERA_SOLUTION.md  TODO.md  TYPESUPPORT_FIX.md  activate_camera.sh  agents.MD  autorun.py  build_ros2_with_camera.sh  debug_rosserver_topics.sh  docker-compose.ros2.yml  docker-compose.ros2.yml.ROSServer-multicast  docker-compose.ros2.yml.backup  docker-compose.ros2.yml.backup2  docker-compose.ros2.yml.discover-ROSServer  docker-compose.ros2.yml.discover-ROSServer-fastdds_super_client  docker-compose.ros2.yml.discoverServer-ROSServer  fastdds_super_client-pc.xml  force_update_lazy_init.sh  instruction.txt  pc_bridge.xml  pi_discovery_fix.xml  pi_static_peers.xml  pi_unicast_only.xml  project_info.md  (+15 more)
.claude/: settings.local.json
Client/: Footage-GUI.py  GUI.py  IP.txt  ip_utils.py  start_ssh_tunnel.bat  test_buttons.py
Docu/: BATTERY_MONITOR_DE.md  BUGFIX_SLOW_MOTION_2026-01-19.md  (+25 more)
hexapod_description/: CMakeLists.txt  package.xml
hexapod_description/launch/: display.launch.py
hexapod_description/urdf/: raspclaws_hexapod.urdf.xacro
raspclaws_interfaces/: CMakeLists.txt  package.xml
raspclaws_interfaces/action/: ArcMove.action  HeadPosition.action  LinearMove.action  Rotate.action
(+128 files in other folders)
