<?xml version="1.0"?>
<package format="3">
    <name>hexapod_description</name>
    <version>0.0.1</version>
    <description>
        URDF/Xacro description of the Adeept RaspClaws Hexapod with pan/tilt camera head.
    </description>

    <maintainer email="thomas@schmiereck.de">Thomas Schmiereck</maintainer>
    <license>MIT</license>

    <!-- Build tool -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Runtime dependencies -->
    <exec_depend>xacro</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>rviz2</exec_depend>

</package>
